# extractorEngine

./: .gitignore  README.md
app/: .env.example  Dockerfile  Makefile  pyproject.toml
app/extractor_engine/: __init__.py  analytics.py  cli.py  config.py  schema.py
app/extractor_engine/crawl/: __init__.py  crawler.py  fetcher.py  frontier.py  rendering_fetcher.py
app/extractor_engine/engine/: __init__.py  cleaner.py  enricher.py  extractor.py  models.py
app/extractor_engine/storage/: __init__.py  base.py  jsonl.py  postgres.py
docs/: README.md  REVIEW.md  architecture.md  configuration.md  crawling.md  data-model.md  design-decisions.md  enrichment.md  extraction.md  future-work.md  observability.md  schema.json  storage-and-idempotency.md  testing.md
examples/: sample_output.jsonl
tests/: conftest.py  test_canonicalize.py  test_cleaner.py  test_config.py  test_crawler.py  test_enricher.py  test_extractor.py  test_fetcher.py  test_golden.py  test_idempotency.py
tests/fixtures/: article_with_author.expected.json  article_with_author.html  book_a-light-in-the-attic.expected.json  link_heavy_content.html  quotes_home.expected.json
