[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "extractor-engine"
version = "1.0.0"
description = "A small, production-minded scraping pipeline that turns one public website into clean, schema-consistent, metadata-rich JSONL documents."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "extractor-engine" }]
keywords = ["scraper", "crawler", "extraction", "rag", "jsonl"]

dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.8",
    "langdetect>=1.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
    "types-beautifulsoup4",
]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
scrape_site = "extractor_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["extractor_engine*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pep8-naming, pyupgrade, bugbear.
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["extractor_engine"]
